--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@sap/cds": "^9",
     "express": "^4",
-    "@cap-js/sqlite": "^2"
+    "@cap-js/sqlite": "^2",
+    "@sap/cds-dk": "^9"
   },
   "devDependencies": {
     "@sap/ux-specification": "latest"
@@ -13,7 +14,7 @@
   "scripts": {
     "start": "cds-serve",
     "watch": "cds watch",
-    "build": "cds build --production"
+    "build": "cds deploy --to sqlite:db.sqlite"
   },
   "engines": {
     "node": ">=18.0.0"
