Fix: Use mocked auth for production deployment

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
         "credentials": {
           "database": "db.sqlite"
         }
+      },
+      "auth": {
+        "kind": "mocked"
       }
     }
   },
